<resources>
    <string name="app_name">TaskDeploymentScheduler</string>
    <color name="primaryColor">#263238</color>
    <color name="primaryLightColor">#4f5b62</color>
    <color name="primaryDarkColor">#000a12</color>
    <color name="secondaryColor">#fff59d</color>
    <color name="secondaryLightColor">#ffffcf</color>
    <color name="secondaryDarkColor">#cbc26d</color>
    <color name="primaryTextColor">#fafafa</color>
    <color name="secondaryTextColor">#263238</color>
    <string name="top_message">You are logged in as %1$s </string>
    <string name="save">Save</string>
    <string name="give_task_to">Give task to...</string>
    <string name="write_task">Write task...</string>
    <string name="task_title">Task Title</string>
    <string name="date_today">Date Today:</string>
    <string name="due_date">Due Date:</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="hello">Hello,</string>
    <string name="what_s_your_role">What\'s your role?</string>
    <string name="ip_address">192.168.1.34:5000</string>
</resources>