<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:paddingTop="40dp">

    <LinearLayout
        android:id="@+id/layout_addtask"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/primaryColor"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".activities.addtaskFragment">

        <CalendarView
            android:id="@+id/calendarView"
            style="@android:style/Widget.DeviceDefault.CalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:theme="@style/CalenderViewCustom"
            android:background="@color/secondaryDarkColor"
            android:dateTextAppearance="@style/TextAppearance.AppCompat.Display1"
            android:focusedMonthDateColor="@color/primaryColor"
            android:unfocusedMonthDateColor="@color/primaryLightColor"
            android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Small" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/date_today"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dateToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/primaryLightColor"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/due_date"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/primaryLightColor"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="32sp" />
        </TableRow>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:textColor="@color/secondaryDarkColor"
                android:textColorHint="@color/secondaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_task"
                android:textColor="@color/secondaryDarkColor"
                android:textColorHint="@color/secondaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_assignTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/give_task_to"
                android:textColor="@color/secondaryDarkColor"
                android:textColorHint="@color/secondaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryDarkColor"
            android:text="@string/save"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>